# seth_qlite

./: CMakeLists.txt  test2.db
include/: seth_qlite.h
src/: main.cpp  seth_qlite.cpp  test.cpp
